[gd_scene load_steps=15 format=2]

[ext_resource path="res://Components/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/circle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.4887, 31.7365 )

[sub_resource type="Animation" id=2]

resource_name = "Die"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=3]

resource_name = "Idle"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

resource_name = "Jump"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=8]

resource_name = "StartPosessing"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("PosessArea:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.662453, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PosessArea/CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ 10.0, 493.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PosessArea/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0.02, 0.02 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "StopPosessing"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("PosessArea:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PosessArea/CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 493.0, 10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PosessArea/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "Walk"
length = 1.0
loop = false
step = 0.1

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CanvasItemMaterial" id=7]

render_priority = 0
blend_mode = 0
light_mode = 0

[sub_resource type="StyleBoxFlat" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.503906, 0, 0, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=11]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.160156, 0.160156, 0.160156, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 33
collision_mask = 33
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
GRAVITY = 2400
SPEED = 30000
JUMP_SPEED = -950
WALL_GRAVITY_THROTLING = 0.05
controlled = false
can_fly = false
can_shoot = false

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="BottomRayRight" type="RayCast2D" parent="." index="2"]

position = Vector2( 29.9286, 29.4885 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 5 )
collision_mask = 1

[node name="BottomRayLeft" type="RayCast2D" parent="." index="3"]

position = Vector2( -29.9286, 29.9286 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 5 )
collision_mask = 1

[node name="RayFront" type="RayCast2D" parent="." index="4"]

position = Vector2( 30.8051, -1.02223 )
enabled = true
exclude_parent = true
cast_to = Vector2( 5, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Die = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/StartPosessing = SubResource( 8 )
anims/StopPosessing = SubResource( 9 )
anims/Walk = SubResource( 5 )
blend_times = [  ]

[node name="PosessArea" type="Area2D" parent="." index="6"]

modulate = Color( 1, 1, 1, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
collision_layer = 32
collision_mask = 32
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Material", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PosessArea" index="0"]

shape = SubResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="PosessArea" index="1"]

modulate = Color( 0.585373, 0.766651, 0.886719, 0.541412 )
material = SubResource( 7 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="ProgressBar" type="ProgressBar" parent="." index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -56.0
margin_right = 32.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Percent", "Visibility", "custom_colors", "custom_styles" ]

[connection signal="body_entered" from="PosessArea" to="." method="_on_PosessArea_body_entered"]


